--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-flex-columns",
   "version": "0.1.0",
-  "description": "Easy layout columns for React",
+  "description": "Easy layout columns for React - Using Flexbox under the hood.",
   "author": "Brad Westfall",
   "license": "MIT",
   "main": "build/Columns.js",
