--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-dom": "^16.3.2",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
@@ -38,6 +39,6 @@
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-media": "^1.8.0"
   }
 }
