Big change in css strategy to emotion for a better responsive strategy

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@emotion/babel-preset-css-prop": "^10.0.6",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -36,9 +37,9 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.6",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-media": "^1.8.0"
+    "react": "^16.3.2"
   }
 }
