--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "scripts": {
     "prepare": "npm run build",
-    "example": "webpack-dev-server --config webpack.config.js",
-    "build": "npm run clean build && babel src/lib --out-dir build",
+    "start": "webpack-dev-server --config webpack.config.js",
+    "build": "npm run clean && babel src/lib --out-dir build",
     "clean": "rimraf build"
   },
   "devDependencies": {
@@ -29,7 +29,6 @@
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "react-dom": "^16.3.2",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
@@ -40,6 +39,7 @@
     "@emotion/core": "^10.0.6",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
